Fixed the gaze container on tablet

--- a/WebEntry/src/components/Views/GazeCursor.css
+++ b/WebEntry/src/components/Views/GazeCursor.css
@@ -10,23 +10,28 @@
   border: 1px solid grey;
   box-sizing: border-box;
   position: relative;
-  height: 100%;
+
+  display: flex;
   width: 100%;
+  height: 100%;
 
   min-width: 100px;
   max-width: 350px;
 }
 
 .gazeCursorContainer {
-  height: calc(84% - 10px);
+  position: relative;
+  height: 84%;
   width: 100%;
 }
 
 .title {
+  position: absolute;
   box-sizing: border-box;
   border-bottom: 1px solid grey;
-  height: calc(16% + 10px);
+  height: 16%;
   width: 100%;
+  background-color: blue;
   padding: 5px;
 
   overflow: hidden;
