--- a/WebEntry/src/pages/ObserverMode.css
+++ b/WebEntry/src/pages/ObserverMode.css
@@ -77,11 +77,8 @@
   justify-content: center;
   align-items: center;
 
-  min-height: 50px;
-  max-height: 200px;
+  height: 200px;
 
   width: 100%;
   overflow-x: auto;
-
-  flex: 1 0 auto;
 }
